bonus/gitlab/repository/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wil42-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wil42
  template:
    metadata:
      labels:
        app: wil42
    spec:
      containers:
      - name: playground
        image: wil42/playground:v2
        ports:
        - containerPort: 8888

---
apiVersion: v1
kind: Service
metadata:
  name: wil42-service
spec:
  selector:
    app: wil42
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
  type: ClusterIP
